# JogoProjects

./: .gitignore  CMakeLists.txt  JogoProjects.sln
DrawCurves/: DrawCurves.cpp  DrawCurves.sln  DrawCurves.vcxproj  DrawCurves.vcxproj.filters
Horizon/: Horizon.cpp  Horizon.vcxproj  Horizon.vcxproj.filters
Jogo/: Arena.cpp  Arena.h  Atari8.fnt  Atari8Tall.fnt  Bitmap.cpp  Bitmap.h  CMakeLists.txt  Font.cpp  Font.h  Input.h  JMath.h  Jogo.cpp  Jogo.h  Jogo.vcxproj  Jogo.vcxproj.filters  Math.cpp  Mesh.cpp  Mesh.h  UI.cpp  UI.h  cheby.py  gfx.cpp  gfx.h  int_types.h  jmath.py  str8.cpp  str8.h
StringTests/: StringTests.cpp  StringTests.vcxproj  StringTests.vcxproj.filters
Tetris/: Tetris.cpp  Tetris.vcxproj  Tetris.vcxproj.filters
UIExample/: UIExample.cpp  UIExample.vcxproj  UIExample.vcxproj.filters
enc_temp_folder/e4989f4bae764657348685c9c5ced4/: UI.cpp
mmdc/: mmdc.cpp  mmdc.vcxproj
mmdc/2600/: 2600.cpp  tia.cpp
mmdc/2600/6502/: 6502.cpp  6502.h
